[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Menus/settings_menu.gd" id="1_9e5r6"]

[node name="SettingsMenu" type="Window"]
title = "Options"
position = Vector2i(100, 80)
size = Vector2i(720, 560)
resizable = true
always_on_top = false
script = ExtResource("1_9e5r6")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="DisplaySection" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DisplayTitle" type="Label" parent="Margin/VBox/DisplaySection"]
layout_mode = 2
text = "Display"

[node name="FullscreenCheck" type="CheckBox" parent="Margin/VBox/DisplaySection"]
layout_mode = 2
text = "Fullscreen"

[node name="ResolutionRow" type="HBoxContainer" parent="Margin/VBox/DisplaySection"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Margin/VBox/DisplaySection/ResolutionRow"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Margin/VBox/DisplaySection/ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 3


[node name="UISec" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="UITitle" type="Label" parent="Margin/VBox/UISec"]
layout_mode = 2
text = "UI"

[node name="UIScaleRow" type="HBoxContainer" parent="Margin/VBox/UISec"]
layout_mode = 2

[node name="UIScaleLabel" type="Label" parent="Margin/VBox/UISec/UIScaleRow"]
layout_mode = 2
text = "UI Scale"

[node name="UIScaleSlider" type="HSlider" parent="Margin/VBox/UISec/UIScaleRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.75
max_value = 2.0
step = 0.05

[node name="MenuWidthRow" type="HBoxContainer" parent="Margin/VBox/UISec"]
layout_mode = 2

[node name="MenuWidthLabel" type="Label" parent="Margin/VBox/UISec/MenuWidthRow"]
layout_mode = 2
text = "Menu Width Ratio"

[node name="MenuWidthRatioSlider" type="HSlider" parent="Margin/VBox/UISec/MenuWidthRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.2
max_value = 3.5
step = 0.1

[node name="ControlsSec" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ControlsTitle" type="Label" parent="Margin/VBox/ControlsSec"]
layout_mode = 2
text = "Controls"

[node name="InvertPanCheck" type="CheckBox" parent="Margin/VBox/ControlsSec"]
layout_mode = 2
text = "Invert Pan"

[node name="InvertZoomCheck" type="CheckBox" parent="Margin/VBox/ControlsSec"]
layout_mode = 2
text = "Invert Zoom"

[node name="GesturesCheck" type="CheckBox" parent="Margin/VBox/ControlsSec"]
layout_mode = 2
text = "Enable Touch Gestures"

[node name="GameplaySec" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="GameplayTitle" type="Label" parent="Margin/VBox/GameplaySec"]
layout_mode = 2
text = "Gameplay & Accessibility"

[node name="HighContrastCheck" type="CheckBox" parent="Margin/VBox/GameplaySec"]
layout_mode = 2
text = "High Contrast Labels"

[node name="ButtonsRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="LeftSpacer" type="Control" parent="Margin/VBox/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetDefaultsButton" type="Button" parent="Margin/VBox/ButtonsRow"]
layout_mode = 2
text = "Reset to Defaults"

[node name="CloseButton" type="Button" parent="Margin/VBox/ButtonsRow"]
layout_mode = 2
text = "Close"
